--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginSignupActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/title_activity_home" />
+        <activity android:name=".StayFragmentsActivity"></activity>
     </application>
 
 </manifest>
