--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home" />
         <activity android:name=".StayFragmentsActivity"></activity>
+        <activity android:name=".AccountActivity"></activity>
+
     </application>
 
 </manifest>
