--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".LoginSignupActivity" />
         <activity
             android:name=".HomeActivity"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/title_activity_home" />
         <activity android:name=".StayFragmentsActivity"></activity>
         <activity android:name=".AccountActivity"></activity>
