Add Trip imlemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.application.travelbuddyapp">
+
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -27,11 +28,11 @@
         <activity android:name=".LoginSignupActivity" />
         <activity
             android:name=".HomeActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:label="@string/title_activity_home" />
-        <activity android:name=".StayFragmentsActivity"></activity>
-        <activity android:name=".AccountActivity"></activity>
-
+            android:label="@string/title_activity_home"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".StayFragmentsActivity" />
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".activity_travel_fragment"></activity>
     </application>
 
 </manifest>
