Add Trip imlemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
         <activity android:name=".StayFragmentsActivity" />
         <activity android:name=".AccountActivity" />
         <activity android:name=".activity_travel_fragment"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
